# computacao-grafica-1-freecam3d

./: .gitignore  CMakeLists.txt  README.md  RESUMO_PALESTRA_CG1_JOGOS.md  main.cpp
glfw/: README.md
glfw/CMake/modules/: FindEpollShim.cmake
glfw/docs/: header.html  intro.dox  monitor.dox  window.dox
glfw/include/GLFW/: glfw3.h  glfw3native.h
glfw/src/: win32_window.c  window.c
includes/KHR/: khrplatform.h
includes/cg1/: camera.h  shader.h  shader_s.h  transformacoes.h
includes/glad/: glad.h
includes/glm/detail/: type_quat.hpp  type_quat.inl
includes/glm/ext/: matrix_clip_space.inl  matrix_projection.inl  matrix_transform.hpp
includes/glm/gtc/: quaternion.hpp
includes/stbimage/: stb_image.h
src/: glad.c  main.cpp  shader.fs  shader.vs  shader_emissorluz.vs  shader_padrao.fs  shader_padrao.vs  transformacoes.cpp
